Added support for all selectors

--- a/w1-d2/index.html
+++ b/w1-d2/index.html
@@ -15,7 +15,7 @@
       <div class='content'>World</div>
     </section>
     <script>
-      console.log($razor('content').length);
+      console.log($razor(".content").length);
     </script>
   </body>
 </html>
