Added method to set style of an element(s)

--- a/w1-d2/index.html
+++ b/w1-d2/index.html
@@ -18,6 +18,7 @@
       console.log($razor(".content").length);
       $razor('.content').addClass('bold');
       $razor('.content').removeClass('strong');
+      $razor('.content').setStyle({ backgroundColor: 'red' });
     </script>
   </body>
 </html>
