Added methods to add and remove event listeners on selected elements

--- a/w1-d2/index.html
+++ b/w1-d2/index.html
@@ -18,6 +18,13 @@
       console.log($razor(".content").length);
       $razor('.content').addClass('bold');
       $razor('.content').removeClass('strong');
+      function clickHandler() {
+        console.log('clicked');
+      }
+      $razor('.content').on('click', clickHandler);
+      setTimeout(() => {
+        $razor('.content').off('click', clickHandler);
+      }, 6000);
     </script>
   </body>
 </html>
