--- a/w1-d2/index.html
+++ b/w1-d2/index.html
@@ -18,6 +18,7 @@
       console.log($razor(".content").length);
       $razor('.content').addClass('bold');
       $razor('.content').removeClass('strong');
+      $razor('.content').setProps('tab-index', '1');
     </script>
   </body>
 </html>
