Added function to change input value of the input element

--- a/w1-d2/index.html
+++ b/w1-d2/index.html
@@ -14,10 +14,12 @@
       <div class='content'>Hello</div>
       <div class='content strong'>World</div>
     </section>
+    <input class='input' type="text" />
     <script>
       console.log($razor(".content").length);
       $razor('.content').addClass('bold');
       $razor('.content').removeClass('strong');
+      $razor('.input').value('123');
     </script>
   </body>
 </html>
